src/objects/Apttus_Config2__ConfigUserPreferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration &amp; Pricing User preferences</description>
    <fields>
        <fullName>Apttus_Config2__CatalogProductsPerPage__c</fullName>
        <description>The number of catalog products to show in the catalog page. Valid values are 10, 20, 50 &amp; 100.</description>
        <inlineHelpText>The number of Catalog products to show in the configuration pages. Valid values are 10, 20, 50 &amp; 100.</inlineHelpText>
        <label>Catalog Products Per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CategoryPreference__c</fullName>
        <description>Category preferences for the user or profile. Enter a comma separated list of category names.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollapseErrorMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether to collapse error message</description>
        <label>Collapse Error Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollapseInfoMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to collapse info message</description>
        <label>Collapse Info Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollapseQuickAddFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quick add filter will be collapsed by default.</description>
        <inlineHelpText>Indicates whether the quick add filter will be collapsed by default.</inlineHelpText>
        <label>Collapse Quick Add Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollapseWarningMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to collapse warning message</description>
        <label>Collapse Warning Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <description>The default flow associated with the user</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The default flow associated with the user</inlineHelpText>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupsPerPage__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Groups Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ItemsPerPage__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The number of browsed or searched products to show in the product selection page. valid values are 5, 10, 15, 20 &amp; 25.</description>
        <inlineHelpText>The number of browsed or searched products to show in the product selection page. valid values are 5, 10, 15, 20 &amp; 25.</inlineHelpText>
        <label>Items Per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoggingLevel__c</fullName>
        <description>The logging level for JavaScript code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The logging level for JavaScript code, valid values are Debug, Info, Error</inlineHelpText>
        <label>Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionItemsPerPage__c</fullName>
        <description>The number of displayed option products to show in the cart page. valid values are 5, 10, 15, 20 &amp; 25.</description>
        <inlineHelpText>The number of displayed option products to show in the cart page. valid values are 5, 10, 15, 20 &amp; 25.</inlineHelpText>
        <label>Option Items Per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedComparisonProducts__c</fullName>
        <description>Used to maintain selection of compared products, between the Catalog and the Compare Features page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Selected Comparison Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProductsPerPage__c</fullName>
        <description>The number of selected products to show in the configuration pages. Valid values are 5, 10, 15, 20 &amp; 25.</description>
        <inlineHelpText>The number of selected products to show in the configuration pages. Valid values are 5, 10, 15, 20 &amp; 25.</inlineHelpText>
        <label>Selected Products Per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Config User Preferences</label>
</CustomObject>